--- a/extensions/thecodemonkey.synthwave-x-fluoromachine-epic-animations-1.4.13/epic-80s-transitions.css
+++ b/extensions/thecodemonkey.synthwave-x-fluoromachine-epic-animations-1.4.13/epic-80s-transitions.css
@@ -28,7 +28,11 @@
 .monaco-editor .monaco-hover {
     background-color: #231d2b;
     display: block!important;
-    padding: 20px;
+    margin-top: -25px !important;
+    overflow: visible !important;
+    height: auto !important;
+    width: auto !important;
+    padding: 10px;
     transition: opacity 1s !important;
     opacity: 1;
     animation: tooltippulse 4s infinite ease-in-out;
@@ -36,6 +40,14 @@
 
 .monaco-editor .monaco-hover.hidden {
     opacity: 0;
+}
+
+
+/* Give the container specific dimensions */
+.monaco-editor .monaco-hover .hover-row {
+    overflow: visible !important;
+    display: flex !important; 
+    align-items: center;
 }
 
 @keyframes tooltippulse {
